new logo, styles

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a href="#"><img id="logo" src="img/logo.gif"/></a>
+          <a href="#"><img id="logo" src="img/logo2.png"/></a>
           <div class="nav-collapse">
             <ul class="nav pull-right">
               <li><a href="mailto:mike@mikeihbe.com">Email</a></li>
