--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
             <ul class="nav pull-right">
               <li><a href="mailto:mike@mikeihbe.com">Email</a></li>
               <li><a href="http://twitter.com/mikeihbe">Twitter</a></li>
-              <li><a href="http://http://www.linkedin.com/pub/mike-ihbe/4/669/a35">LinkedIn</a></li>
+              <li><a href="http://www.linkedin.com/pub/mike-ihbe/4/669/a35">LinkedIn</a></li>
               <li><a href="https://www.facebook.com/mikeihbe">Facebook</a></li>
               <li><a href="https://github.com/mikejihbe/">Code</a></li>
-              <li><a href="http://http://mikeihbe.tumblr.com/">Blog</a></li>
+              <li><a href="http://mikeihbe.tumblr.com/">Blog</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
