Add MustWin and new background

--- a/index.html
+++ b/index.html
@@ -87,6 +87,42 @@
           <img id="doorway" src="img/doorway.jpg">
         </div>
       </div>
+      <div id="row-mustwin" class="row section">
+        <div class="span8">
+          <a href="http://mustw.in"><img id="mustwin" class="border" src="img/mustwin.png"></a>
+        </div>
+        <div class="span4">
+          <h1>Founder and Principal at <a class="company-name" href="http://mustw.in">MustWin</a></h1>
+          <h4>2012-*:  Rails, Java, Javascript, NodeJS, HTML5, CSS</h4>
+
+          <p>MustWin is my latest project.  We're a web-business strategic consultancy with a wide range skills applicable to most any web or mobile business.</p>
+          <p>We can help with most technical problems including end-to-end product design and development, feature additions, improving conversion rates, SEO, scaling web systems, resolving performance issues, and even helping to build your team</p>
+        </div>
+
+        <div class="row">
+          <div class="secondrow span7 ">
+          </div>
+          <div class="quote span4 offset1">
+              <!--<p>&ldquo;There will be a really awesome quote here about how great I am&rdquo; --Someone REALLY important</p>-->
+
+          </div>
+
+        </div>
+      </div>
+      <div class="row section smaller">
+        <div class="span4">
+          <h1>CTO and CoFounder at <a class="company-name" href="https://mantanks.com">Mantanks.com</a></h1>
+          <h4>2012: HTML5, CSS, Javascript, Ruby</h4>
+
+<p>Mantanks is the coolest way to make a custom tank top.  We've created a fun "bro" brand and we streamlined the creation of a custom tank top as much as possible.  Follow us on twitter <a href="http://twitter.com/mantanks">@mantanks</a> and create your first tank today!</p>
+
+<p>I built the whole thing in my free time!  This is definitely an ongoing project and I've had a lot of help from my cofounders with mastering the design.</p>
+
+        </div>
+        <div class="span8">
+          <a href="https://mantanks.com"><img class="border" src="img/mantanks.png"/></a>
+        </div>
+      </div>
       <div id="row-yammer" class="row section">
         <div class="span8">
           <a href="http://yammer.com"><img id="yammer" class="border" src="img/yammer.png"></a>
